--- a/app/assets/stylesheets/api/nav_bar.scss
+++ b/app/assets/stylesheets/api/nav_bar.scss
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 0;
+  padding: 0;
   border-bottom: 1px solid white;
   position: fixed;
 }
@@ -39,17 +39,18 @@
 }
 
 .navbar-options {
-  width: 80%;
   height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  // border: 1px solid red;
 }
 
 .profile-options-menu {
   height: 100%;
-  position:relative;
+  position: relative;
+  // border: 1px solid yellow;
 }
 
 .avatar-button {
@@ -57,13 +58,13 @@
   display: flex;
   flex-direction: row;
   margin: 0 40px;
+  align-items: center;
   cursor: pointer;
 }
 
 .current-avatar-img {
-  height: 100%;
+  height: 65%;
   width: auto;
-  border: 1px solid green;
 }
 
 .triangle-arrow {
